[package]
name = "rust-type-race-tui" # IMPORTANT: Replace with your actual app name
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Check crates.io for the latest version of ratatui
ratatui = { version = "0.26.1", features = ["crossterm"] }
# Crossterm is needed when using the ratatui crossterm backend feature
crossterm = "0.27.0"

# Logging facade
log = "0.4"
# Logging implementation (for file logging)
simplelog = "0.12"
whoami = "1.6.0"
